Van Eeckelen: Symptomatology in Friedrich Nietzsche and René Girard

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -654,6 +654,11 @@
         <span lang="en">This book is based on the author's doctoral dissertation. See also the 
         <a href="https://nietzschegirardmimetism.com/">author's website</a>.</span>
       </li>
+      <li><span lang="nl">Van Eeckelen, Kevin</span>:
+        <a href="https://biblio.ugent.be/publication/1041094">Symptomatology in Friedrich Nietzsche and René Girard: demarcation, illustration and onto-aesthetical consequences</a>,
+        <i class="proceedings"><!--@@CSS class-->Language and the scientific imagination : proceedings of the 11th conference of the international society for the study of European ideas (<abbr>ISSEI</abbr>)</i>,
+        28 July -2 August 2008, University of Helsinki, Finland. [Open Access. Published in 2010?]
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
