Sciences et avenir: René Girard, le nouveau Darwin des sciences humaines, est mort

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -775,6 +775,10 @@
         <a href="https://www.jesuit.org.uk/death-visionary-thinker-ren%C3%A9-girard">Death of visionary thinker René Girard</a>,
         <i class="website">Jesuits in Britain</i>, 05.11.2015.
       </li>
+      <li lang="fr">
+        <a href="https://www.sciencesetavenir.fr/archeo-paleo/anthropologie/rene-girard-le-nouveau-darwin-des-sciences-humaines-est-mort_104092" hreflang="fr">René Girard, le "nouveau Darwin des sciences humaines", est mort</a>,
+        <i class="magazine">Sciences et avenir</i>, 05.11.2015.
+      </li>
       <li>Europe 1:
         <a href="https://www.youtube.com/watch?v=qoaEdWLT6TQ">René Girard&nbsp;: l'hommage de Jean-Pierre Elkabbach</a>,
         06.11.2015.
