Link to The Unnamable One in nav; character entity for nbsp

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -49,6 +49,7 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -63,7 +64,7 @@
         </cite>
       </p>
       <p lang="fr">
-        <q cite="https://fr.wikiquote.org/wiki/Charles_P%C3%A9guy#Victor-Marie,_comte_Hugo">Le kantisme a les mains pures&amp;; par malheur, il n'a pas de mains.</q>
+        <q cite="https://fr.wikiquote.org/wiki/Charles_P%C3%A9guy#Victor-Marie,_comte_Hugo">Le kantisme a les mains pures&nbsp;; par malheur, il n'a pas de mains.</q>
         <cite>Charles Péguy, <i class="booktitle">Victor-Marie, comte Hugo</i>.</cite>
       </p>
     </blockquote>
