--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -49,6 +49,7 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -84,15 +85,15 @@
         <i class="booktitle">The Cambridge Companion to Marx</i>. Cambridge Companions to Philosophy. Cambridge University Press, 1992. (376 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/history-philosophy/cambridge-companion-marx?format=PB"><abbr>ISBN</abbr> 9780521366946</a>.
       </li>
+      <li>Carver, Terrell; Farr, James:
+        <i class="booktitle">The Cambridge Companion to The Communist Manifesto</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2015. (310 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/history-ideas/cambridge-companion-communist-manifesto?format=PB"><abbr>ISBN</abbr> 9781107683075</a>.
+      </li>
+      <li>Leopold, David:
+        <i class="booktitle">The Young Karl Marx: German Philosophy, Modern Politics, and Human Flourishing</i>. Ideas in Context. Cambridge University Press, 2009. (340 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/young-karl-marx-german-philosophy-modern-politics-and-human-flourishing?format=PB"><abbr>ISBN</abbr> 9780521118262</a>.
+      </li>
     </ul>
-    <li>Carver, Terrell; Farr, James:
-      <i class="booktitle">The Cambridge Companion to The Communist Manifesto</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2015. (310 pages)
-      <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/history-ideas/cambridge-companion-communist-manifesto?format=PB"><abbr>ISBN</abbr> 9781107683075</a>.
-    </li>
-    <li>Leopold, David:
-      <i class="booktitle">The Young Karl Marx: German Philosophy, Modern Politics, and Human Flourishing</i>. Ideas in Context. Cambridge University Press, 2009. (340 pages)
-      <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/young-karl-marx-german-philosophy-modern-politics-and-human-flourishing?format=PB"><abbr>ISBN</abbr> 9780521118262</a>.
-    </li>
     <!--
       <li>:
         <i class="booktitle"></i>. ( pages)
