Refutation of claims about summary of René Girard's theory of religion

--- a/humanities/the-one-whose-name-must-not-be-mentioned.html
+++ b/humanities/the-one-whose-name-must-not-be-mentioned.html
@@ -54,7 +54,8 @@
   </nav>
 
   <main>
-  <p>Someone asked on Literature Stack Exchange,
+  <p>In August 2019, a person using the pseudonym <a href="https://literature.stackexchange.com/users/17/rand-althor">Rand al'Thor</a>
+    asked on Literature Stack Exchange,
     <a href="https://literature.stackexchange.com/q/11635/2191">What is the origin of the trope of an evil character whose name is not permitted to be spoken?</a>
     The full question goes as follows:
   </p>
@@ -110,8 +111,100 @@
   
   <p>The above theory does not explain the origin of all religions; it is a theory about religious practices that emerged as a result psycho-social mechanisms, not about religions that have a historical "founding father", e.g. Christianity, Islam and Buddhism. However, it is possible that these newer religions incorporated ancient beliefs and taboos instead of replacing them entirely. In addition, Girard also describes how the Old Testament subverts the belief in the guilt of the sacrificial victim. For example, the myth about Romulus and Remus is very similar to the story of Cain and Abel, but with an important difference: the God of the Old Testament does not let Cain get away with Abel's murder. (For more about this, see <em>Things Hidden Since the Foundation of the World</em>.)</p>
 
-  </main>
+  <hr>
+  <p>Within less than an after its submission<!--submission: 13:12; deletions: 14:09-->, the text of the above answer was reduced to 36 percent of its original length
+    by Rand al'Thor because he felt that it contained <q>unnecessary proselytising</q>.
+    <!--
+      Original size of output (LibreOffice word count & char count): 1151 words / 6927 characters [https://literature.stackexchange.com/revisions/11650/1 ]
+      Resulting size of markdown (LibreOffice word count & char count): 418 words / 3081 characters;
+      resulting size of output (LibreOffice word count & char count): 418 words / 2414 characters [https://literature.stackexchange.com/revisions/11650/2 ], i.e. 36.3 percent of the original length.
+    -->
+    The full revision comment read (only registered users have access to the <a href="https://literature.stackexchange.com/posts/11650/revisions">revision history</a>):
+    <blockquote cite="https://literature.stackexchange.com/posts/11650/revisions">Feel free to roll back this edit if you really want to include all that massive text about a theory on the origin of religion, but I won't give a green tick to an answer with that much unnecessary proselytising.
+      In the spirit of significantly editing others' posts to improve the site &hellip; :-)
+    </blockquote>
+  </p>
+  <p>
+    A <a href="https://chat.stackexchange.com/transcript/message/51535413#51535413">follow-up comment in the chat area</a> later asked,
+    <blockquote cite="https://chat.stackexchange.com/transcript/message/51535413#51535413">Did I misunderstand something, or is the non-existence of any actual deity an unstated assumption in that entire theory?</blockquote>
+    <a href="https://chat.stackexchange.com/transcript/message/51535529#51535529">Other objections that were posted soon afterwards</a> went as follows:
+    <div class="blockquote">
+      <blockquote cite="https://chat.stackexchange.com/transcript/message/51535529#51535529">I have no issue with agnostics, but true atheists, who believe absolutely in the non-existence of any deity, have as much a faith-based position as believers in God.</blockquote>
+      <!--"true atheists" if a fallacy known as "persuasive definition" / https://en.wikipedia.org/wiki/Persuasive_definition or "definist fallacy" / https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/75/Definist-Fallacy
+        See also the "no true Scotsman" fallacy: https://en.wikipedia.org/wiki/No_true_Scotsman
+      -->
+      <blockquote cite="https://chat.stackexchange.com/transcript/message/51535551#51535551">And a theory which holds that the idea of a god emerged from violence and human sacrifice, or any other purely human interaction, logically depends on the assumption that there is no actual god.</blockquote>
+    </div>
+  </p>
+  <p>
+    Based on the the speed of the deletion (within an hours), its size (74 percent of the text) and its justification (it assumes the non-existence of a deity),
+    it appears that it the answer was objectionable because a theory about the origin of religion should not assume that a god (or gods) does not exist.
+    There are several issues with Rand al'Thor's reaction.
+  </p>
+  <ul>
+    <li>Censorship is unacceptable. (Nothing needs to be added to this.)</li>
+    <li>The original summary of René Girard's theory is <em>not</em> based on the assumption that there is no god. It is, in fact, completely agnostic on this issue.</li>
+    <li>Characterising Girard's theory is one <q>which holds that the idea of a god emerged from violence and human sacrifice</q> overlooks
+      the more important aspect of theory that religious practices developed as mechanisms to keep social violence in check.
+    </li>
+    <li>Atheism is not defined as <q>[belief] in the non-existence of any deity</q>; that would be a definition of &ldquo;anti-theistic belief&rdquo;
+      or <a href="https://en.wikipedia.org/wiki/Antitheism">antitheism</a>.
+      <dfn>Atheism</dfn> is a specific application of scepticism that leads to a lack of belief in the existence of deities (because of a lack of convincing evidence for their existence).
+      The <em>absence of belief</em> in something is not the same as <em>belief in the absence</em> of something.
+      The absence of belief only requires a lack of evidence.
+      By contrast, the claim that something does not exist requires evidence (or at least strong arguments) for the non-existence of that thing.
+      <!--(In the case of deities, the absence of evidence for their existence is overwhelming.)-->
+      <br />See also the distinction between
+      <a href="https://en.wikipedia.org/wiki/Negative_and_positive_atheism">negative and positive atheism</a>:
+      negative or soft atheism rejects belief in the existence of any deities,
+      whereas positive or strong atheism asserts that no deities exist.
+    </li>
+  </ul>
+  <p>Not also that an anthropological theory about the origin of prehistoric religion that assumes the existence of a god would still need to explain how <em>belief</em> in a god came into existence.
+    The existence of a god does not automatically <em>cause</em> belief in a god (either that same god or a different one),
+    just like the existence of gravity, to which hominids have been exposed for millions of years, did not automatically cause &ldquo;belief&rdquo; in the 
+    <a href="https://en.wikipedia.org/wiki/Gravity#Newton's_theory_of_gravitation">theory of gravitation</a>.
+    The existence of a force (or an invisible being) and belief in its existence are two very different things.
+  </p>
 
+  </main>
+<!--Markdown of original version:
+
+As Obie pointed out in a comment, the expression [speak of the devil and he shall appear](https://en.wikipedia.org/wiki/Speak_of_the_devil) is a remnant of a naming taboo that was taken very seriously in days long gone. Religions have known many more naming taboos. The Wikipedia article [Names of God in Judaism](https://en.wikipedia.org/wiki/Names_of_God_in_Judaism) points out that most English editions of the Bible use the phrase "the Lord", "owing to the Jewish tradition increasingly viewing the divine name as too sacred to be uttered." (See also [Why Don’t Jews Say G‑d’s Name?](https://www.chabad.org/library/article_cdo/aid/1443443/jewish/Why-Dont-Jews-Say-Gds-Name.htm).) In imperial China, there [was a taboo on using the emperor's name](https://en.wikipedia.org/wiki/Naming_taboo). Somewhat similar is the prohibition against creating images of a god (or of living beings in general), notably in Islam. See for example the article [The Religious Prohibition Against Images](https://www.davidmus.dk/en/collections/islamic/cultural-history-themes/image-prohibition), which quotes the Sahih Muslim hadith:
+
+> He who creates pictures in this world will be ordered to breathe life into them on the Day of Judgment, but he will be unable to do so.
+
+Finding the origin of such prohibitions, requires a theory about the origin of religion generally, and I don't believe there is a consensus about this topic in anthropology. One theory that is capable of explaining the above is the one proposed by [René Girard](https://en.wikipedia.org/wiki/Ren%C3%A9_Girard) (1923 – 2015), especially in his works *La Violence et le sacré* (1972; English: [*Violence and the Sacred*](https://jhupbooks.press.jhu.edu/title/violence-and-sacred)) and *Des choses cachées depuis la fondation du monde* (1978; English: [*Things Hidden Since the Foundation of the World*](https://www.sup.org/books/title/?id=2670)). I can only give an extremely condensed summary of his theory here.
+
+In his earliest works, René Girard had explained that the human capacity to imitate ("mimesis") does not only help us learn things (see [Aristotle's view on mimesis](http://newlearningonline.com/new-learning/chapter-8/aristotle-on-mimesis)) but that it can also lead to conflict when one individual imitates another's desire for something. In *Mensonge romantique et vérité romanesque* (1961) Girard analysed a number of novels that exposed the romantic lie that our wishes and desires are entirely original and that show them to be the result of imitation. Some of these novels also described sophisticated ways of dealing with mimetic rivals.
+
+Next, Girard asked what this insuppressible tendency to imitate would have meant for early human culture. The increase in brain size during the evolution from primates to hominids did not only imply a greater capacity to learn but also a potential increase in mimetic conflicts. Looking at a wide range of myths and religions, Girard used a process that may be described as abductive inference to arrive at the following hypothesis:
+
+1. Mimetic conflicts could escalate until they involved the entire group. This conflict of all against all could only end if one individual died as the result of this **collective violence**. Since the death of this individual brought back peace, this individual became associated with both the power to bring this peace and with the power to bring the preceding collective violence. This individual possessed nothing less than a **godlike power**. This process must have repeated itself many times until early hominids developed way of dealing with this, as described below.
+2. In the collective conflict described above, social and other differences within the group seem to disappear. This could lead to an association between the **absence/disappearance of differences** and social conflict, and hence a fear of an absence of differences. One example of this are myths in which one brother kills his twin and thereby establishes a new order, e.g. the mythical founding of Rome is based on Romulus killing his brother Remus.
+3. Ancient religious practices originate from an effort to deal with the collective violence. For example, instead of waiting for the next collective conflict, the community choses an individual and collectively kills it. The victim is strictly speaking innocent, but the **collective murder** turns him into the godlike individual that can cause violence and bring back peace. It is essential that the entire community believes in the victim's guilt, otherwise his death cannot bring peace because it would trigger revenge killings and more violence. Myths describing the death of individuals who brought certain things or benefits into the world leave no doubt about the victim's guilt.
+4. Since the sacrificed individual has dangerous powers, it makes sense to delegate this sacrifice to one or more individuals, who thus become **"priests"**.
+5. Since the collective violence mentioned above is associated with all sorts of transgessions, it makes sense to delay the sacrifice of the chosen victim in order to allow or force him to violate all sorts of social rules (rules that would lead to collective violence if everyone violated them). This individual violates what some cultures call **"taboo"** and thereby establishes his guilt and justifies his sacrifice at the hands of the community or the priests.
+6. The chosen individual is associated with the power to bring violence, and hence is very dangerous. If he manages to exploit the fear he causes, he may be able to delay the sacrifice, stay alive and become a **"god-king"**. This would be the origin of [sacred kingship](https://en.wikipedia.org/wiki/Sacred_king). Based on Girard's theory, it is no coincidence that kings were often considered as gods or their intermediaries (e.g. the [Egyptian pharaohs](https://en.wikipedia.org/wiki/Pharaoh)).
+7. The meaning of the godlike victim was always **ambiguous**, i.e. having power over both peace and violence. This would explain why some languages have words that can mean both "sacred" and "cursed", e.g. the [Latin word *sacer*](https://en.wiktionary.org/wiki/sacer). (The same ambiguity is still present in the [French adjective *sacré*](https://en.wiktionary.org/wiki/sacr%C3%A9).) However, this ambiguity is difficult to tolerate in the long run, so cultures must either find excuses why "good gods" sometimes do bad things or make a distinction between "good gods" and "devils" (in Christian culture, Satan is a fallen angel). 
+8. Early hominids seem not to have distinguished clearly (or not always) between **a thing and its name**. This would also apply to the godlike individual or victim mentioned above and hence also to kings. This would have given rise to **naming taboos**, which can apply both to "good gods" and "devils". It would expain why "the divine name [was] too sacred to be uttered" (to quote the Wikipedia article about [Names of God in Judaism](https://en.wikipedia.org/wiki/Names_of_God_in_Judaism) again).
+
+The above theory does not explain the origin of all religions; it is a theory about religious practices that emerged as a result psycho-social mechanisms, not about religions that have a historical "founding father", e.g. Christianity, Islam and Buddhism. However, it is possible that these newer religions incorporated ancient beliefs and taboos instead of replacing them entirely. In addition, Girard also describes how the Old Testament subverts the belief in the guilt of the sacrificial victim. For example, the myth about Romulus and Remus is very similar to the story of Cain and Abel, but with an important difference: the God of the Old Testament does not let Cain get away with Abel's murder. (For more about this, see *Things Hidden Since the Foundation of the World*.)
+
+-->
+
+<!--Markdown of Rand al'Thor's version:
+
+As Obie pointed out in a comment, the expression [speak of the devil and he shall appear](https://en.wikipedia.org/wiki/Speak_of_the_devil) is a remnant of a naming taboo that was taken very seriously in days long gone. Religions have known many more naming taboos. The Wikipedia article [Names of God in Judaism](https://en.wikipedia.org/wiki/Names_of_God_in_Judaism) points out that most English editions of the Bible use the phrase "the Lord", "owing to the Jewish tradition increasingly viewing the divine name as too sacred to be uttered." (See also [Why Don’t Jews Say G‑d’s Name?](https://www.chabad.org/library/article_cdo/aid/1443443/jewish/Why-Dont-Jews-Say-Gds-Name.htm).) In imperial China, there [was a taboo on using the emperor's name](https://en.wikipedia.org/wiki/Naming_taboo). Somewhat similar is the prohibition against creating images of a god (or of living beings in general), notably in Islam. See for example the article [The Religious Prohibition Against Images](https://www.davidmus.dk/en/collections/islamic/cultural-history-themes/image-prohibition), which quotes the Sahih Muslim hadith:
+
+> He who creates pictures in this world will be ordered to breathe life into them on the Day of Judgment, but he will be unable to do so.
+
+Finding the origin of such prohibitions, requires a theory about the origin of religion generally, and I don't believe there is a consensus about this topic in anthropology. One theory that is capable of explaining the above is the one proposed by [René Girard](https://en.wikipedia.org/wiki/Ren%C3%A9_Girard) (1923 – 2015), especially in his works *La Violence et le sacré* (1972; English: [*Violence and the Sacred*](https://jhupbooks.press.jhu.edu/title/violence-and-sacred)) and *Des choses cachées depuis la fondation du monde* (1978; English: [*Things Hidden Since the Foundation of the World*](https://www.sup.org/books/title/?id=2670)). Part of his theory of the origins of religion includes the following points.
+
+1. The meaning of a godlike individual was always **ambiguous**, i.e. having power over both peace and violence. This would explain why some languages have words that can mean both "sacred" and "cursed", e.g. the [Latin word *sacer*](https://en.wiktionary.org/wiki/sacer). (The same ambiguity is still present in the [French adjective *sacré*](https://en.wiktionary.org/wiki/sacr%C3%A9).) However, this ambiguity is difficult to tolerate in the long run, so cultures must either find excuses why "good gods" sometimes do bad things or make a distinction between "good gods" and "devils" (in Christian culture, Satan is a fallen angel). 
+2. Early hominids seem not to have distinguished clearly (or not always) between **a thing and its name**. This would also apply to godlike individuals and hence also to kings. This would have given rise to **naming taboos**, which can apply both to "good gods" and "devils". It would expain why "the divine name [was] too sacred to be uttered" (to quote the Wikipedia article about [Names of God in Judaism](https://en.wikipedia.org/wiki/Names_of_God_in_Judaism) again).
+
+-->
   <footer>
     <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
