Standpoint: Shakespeare: Mimesis and desire

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -955,6 +955,12 @@
         The fifth and last part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
       <li>
+        <a href="https://standpointmag.co.uk/issues/december-2018-january-2019/text-dialogue-rene-girard-robert-pogue-harrison-mimesis-desire-shakespeare/">Shakespeare: Mimesis and desire</a>,
+        <i class="website">Standpoint</i>, 03.12.2018.
+        <q>“Why do we want what we want? Where do our desires come from? Why do we chase the things that elude us?” A dialogue between René Girard and Robert Pogue Harrison, introduced by Cynthia Haven</q>
+        <!--@@PDF-->
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=36pvMK-BrnM" lang="fr">René Girard - Entretien sur Radio Courtoisie (2005)</a>
         (Artesquieu on YouTube, 82 minutes, 29.01.2019).
       </li>
