Wikipedia: List of fallacies. Minor edits

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -283,13 +283,16 @@
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/List_of_cognitive_biases">List of 
-        cognitive biases</a> on <i>Wikipedia</i>.
+        cognitive biases</a> on <i class="wiki">Wikipedia</i>.
         According to Wikipedia's definition,
         <q cite="https://en.wikipedia.org/w/index.php?title=Special:CiteThisPage&page=List_of_cognitive_biases&id=686408685">Cognitive biases 
         are tendencies to think in certain ways that can lead to systematic 
         deviations from a standard of rationality or good judgment, 
         and are often studied in psychology and behavioral economics.</q>
         Most of these biases have articles of their own.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/List_of_fallacies">List of fallacies</a> on <i class="wiki">Wikipedia</i>.
       </li>
       <li>
         <a href="https://streetepistemology.com/">Street Epistemology</a>:
@@ -342,7 +345,7 @@
       </li>
       <li>DeMichele, Thomas:
         <a href="http://factmyth.com/factoids/you-cant-prove-a-negative/">You Can’t Prove a Negative</a>,
-        <i class="website">Fact or Myth?</i>, 26.07.2017, updated on 31.05.2018.
+        <i class="website">Fact or Myth?</i>, 26.07.2017, updated on 31.05.2018, 08.07.2019.
       </li>
       <li>Carrier, Richard:
         <a href="https://infidels.org/library/modern/richard_carrier/theory.html">Proving a Negative</a>
@@ -358,7 +361,6 @@
         <a href="https://philosophy.stackexchange.com/q/678/23586">Does a negative claimant have a burden of proof?</a>
         (question on Philosophy Stack Exchange).
       </li>
-      <!--@@Hales, Steven D.: "You Can Prove a Negative", Think, Summer 2005: https://departments.bloomu.edu/philosophy/pages/content/hales/articles/proveanegative.html-->
     </ul>
 
     <h2>How We Think (Dewey)</h2>
