The best books on Critical Thinking recommended by Nigel Warburton

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -209,6 +209,18 @@
         <a href="https://www.csicop.org/specialcollections/show/carl_sagan_collection">Carl Sagan Collection</a>,
         <i class="website">Center for Inquiry</i> (no date).
       </li>
+      <li>
+        <a href="https://fivebooks.com/best-books/critical-thinking-nigel-warburton/">The best books on Critical Thinking recommended by Nigel Warburton</a>,
+        <i class="website">Five Books</i>, 6 September 2019.
+        <br />Nigel Warburton, author of <i class="booktitle">Thiking from A to Z</i>, recommends the following books:
+        <ul>
+          <li><i class="booktitle">Thinking Fast and Slow</i> by Daniel Kahneman,</li>
+          <li><i class="booktitle">Factfulness</i> by Hans Rosling,</li>
+          <li><i class="booktitle">Black Box Thinking</i> by Matthew Syed,</li>
+          <li><i class="booktitle">The Art of Thinking Clearly</i> by Rolf Dobelli (2013),</li>
+          <li><i class="booktitle">Critical Thinking: Your Guide to Effective Argument, Successful Analysis and Independent Study</i> by Tom Chatfield.</li>
+        </ul>
+      </li>
     </ul>
     <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
       * Do you know anyone who has written a number of research (quantitative and qualitative) on critical thinking? : https://www.researchgate.net/post/Do_you_know_anyone_who_has_written_a_number_of_research_quantitative_and_qualitative_on_critical_thinking
