--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -275,6 +275,10 @@
       <li><a href="https://www.youtube.com/playlist?list=PL8CE6188299CCFA23" lang="fr">Logique et raisonnements</a>
         by Exo7Math is part of a mathematics course. It consists of 19 videos that are each between 2 and 20 minutes long.
       </li>
+      <li>Ben-Ari, Mordechai:
+        <i class="booktitle">Mathematical Logic for Computer Science</i>. Third edition. Springer, 2012. (346 pages)
+        <a href="https://www.springer.com/gp/book/9781447141280"><abbr>ISBN</abbr> 978-1-4471-4128-0</a>.
+      </li>
     </ul>
 
     <h2>Cognitive Biases, Fallacies and Thinking Errors</h2>
