Hoey: Logical Analysis of Monty Python's Witch Scene from the Holy Grail

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -482,6 +482,11 @@
         (See <a href="http://www.montypython.net/scripts/HG-witchscene.php">the script of &ldquo;Burn the Witch&rdquo;</a>
         on MontyPython.net.)
       </li>
+      <li>Hoey, Jessel
+        <a href="https://cs.uwaterloo.ca/~jhoey/montypythonwitchsceneanalysis.html">Logical Analysis of Monty Python's Witch Scene from the Holy Grail</a>.
+        <br />This analysis introduced the term &ldquo;modus bogus&rdquo; as a corruption of the
+        <a href="https://en.wikipedia.org/wiki/Modus_ponens">modus ponens</a>.
+      </li>
     </ul>
   </main>
 
