Haralambous: A Logical Proof that the Monty Python Burn the Witch Scene Reasoning is Fallacious

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -487,6 +487,11 @@
         <br />This analysis introduced the term &ldquo;modus bogus&rdquo; as a corruption of the
         <a href="https://en.wikipedia.org/wiki/Modus_ponens">modus ponens</a>.
       </li>
+      <li>Yannis Haralambous:
+        <a href="https://www.youtube.com/watch?v=cMvZFRTih6g">A Logical Proof that the Monty Python "Burn the Witch" Scene Reasoning is Fallacious</a>
+        (Yannis Haralambous on YouTube, 15 minutes, 12.12.2013).
+        This video is part of an undergraduate Logic class.
+      </li>
     </ul>
   </main>
 
