Jogalekar: Is psychology a “real” science? Does it really matter?

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -664,6 +664,10 @@
         <a href="https://blogs.scientificamerican.com/psysociety/psychology-8217-s-brilliant-beautiful-scientific-messiness/">Psychology’s brilliant, beautiful, scientific messiness</a>,
         <i class="blog">Psysociety (Scientific American Blog Network)</i>, 13.08.2013.
       </li>
+      <li>Jogalekar, Ashutosh:
+        <a href="https://blogs.scientificamerican.com/the-curious-wavefunction/is-psychology-a-e2809creale2809d-science-does-it-really-matter/">Is psychology a “real” science? Does it really matter?</a>,
+        <i class="blog">The Curious Wavefunction (Scientific American Blog Network)</i>, 13.08.2013.
+      </li>
       <li>Nick Brown:
         <a href="https://www.youtube.com/watch?v=SPtWPBapyF0">Limits of Scientific Psychology</a>
         (YouTube, 16 minutes, 13.12.2015): presentation at <abbr>TEDx</abbr>Rhodes, 05.09.2015.
