The best books on Socrates recommended by M M McCabe

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1951,6 +1951,30 @@
         <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
         <i class="magazine">Aeon</i>, no date (September/October 2017).
       </li>
+      <li>
+        <a href="https://fivebooks.com/best-books/socrates/">The best books on Socrates recommended by M M McCabe</a>,
+        <i class="website">Five Books</i>, no date (possibly April 2016).
+        <a href="https://www.kcl.ac.uk/people/mm-mccabe">M. M. McCabe</a>, author of
+        <i class="booktitle">Platonic Conversations</i>, recommends the following books:
+        <ul>
+          <li><i class="booktitle">Apology</i> by Plato (included in <abbr>e.g.</abbr>
+            <a href="https://www.hackettpublishing.com/five-dialogues"><i class="booktitle">Five Dialogues: Euthyphro, Apology, Crito, Meno, Phaedo</i></a>
+            translated by G. M. A. Grube, an edition that provides detailed footnotes).
+          </li>
+          <li><i class="booktitle">The Clouds</i>, a comedy by Aristophanes.
+          </li>
+          <li><i class="booktitle">Theaetetus</i> by Plato.
+          </li>
+          <li>
+            <a href="https://www.cornellpress.cornell.edu/book/9780801497872/socrates-ironist-and-moral-philosopher/"><i class="booktitle">Socrates, Ironist and Moral Philosopher</i></a>
+            by Gregory Vlastos (Cornell University Press, 1991).
+          </li>
+          <li>
+            <a href="https://www.ucpress.edu/book/9780520224902/the-art-of-living"><i class="booktitle">The Art of Living: Socratic Reflections from Plato to Foucault</i></a>
+            by Alexander Nehamas (University of California Press, 2000).
+          </li>
+        </ul>
+      </li>
       <!--@@section Chinese philosophy-->
       <li>
         <a href="https://aeon.co/essays/the-influential-confucian-philosopher-you-ve-never-heard-of">The second sage&nbsp;/ The influential Confucian philosopher you’ve never heard of</a>,
