Sloane: Making artificial intelligence socially just: why the current focus on ethics is not enough

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -155,6 +155,10 @@
         <a href="https://qz.com/1276781/algorithms-are-making-the-same-mistakes-assessing-credit-scores-that-humans-did-a-century-ago/">Algorithms are making the same mistakes assessing credit scores that humans did a century ago</a>,
         <i class="website">Quartz</i>, 14.05.2018.
       </li>
+      <li>Sloane, Mona:
+        <a href="https://blogs.lse.ac.uk/politicsandpolicy/artificial-intelligence-and-society-ethics/">Making artificial intelligence socially just: why the current focus on ethics is not enough</a>,
+        <i class="blog"><abbr title="London School of Economics and Political Science">LSE</abbr> Blog</i>, 06.07.2018.
+      </li>
       <li>Barrett, Brian:
         <a href="https://www.wired.com/story/amazon-facial-recognition-congress-bias-law-enforcement/">Lawmakers Can't Ignore Facial Recognition's Bias Anymore</a>,
         <i class="website">Wired</i>, 26.07.2018.
