See also Judea Pearl's homepage

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -141,6 +141,11 @@
       <li>Pearl, Judea; Mackenzie, Dana:
         <i class="booktitle">The Book of Why: The New Science of Cause and Effect</i>. Allen Lane, 2018. (432 pages)
         <a href="https://www.penguin.co.uk/books/289825/the-book-of-why/9780241242636.html"><abbr>ISBN</abbr> 9780241242636</a>.
+        <br />See also
+        <a href="http://bayes.cs.ucla.edu/jp_home.html">Judea Pearl's homepage</a>
+        and
+        <a href="https://stats.stackexchange.com/q/376920/122650">The Book of Why by Judea Pearl: Why is he bashing statistics?</a>
+        on Cross Validated on Stack Exchange.
       </li>
     </ul>
 
