Raval: How to Learn Mathematics Fast

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -336,6 +336,10 @@
         <a href="https://luden.io/wtl/">while True: learn()</a>:
         <q>This game is a simulator of a machine learning specialist who uses visual programming to make his living. Special skills are not required.</q>
       </li>
+      <li>Raval, Siraj:
+        <a href="https://www.youtube.com/watch?v=YzfdL58virc">How to Learn Mathematics Fast</a>
+        (Siraj Raval on YouTube, 11 minutes, 19.01.2018).
+      </li>
     </ul>
 
     <h2>Other Links</h2>
