Hao: AI’s white guy problem isn’t going away

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -167,6 +167,10 @@
         <a href="https://www.siliconrepublic.com/machines/ibm-fairness-360-ai-bias"><abbr>IBM</abbr> reveals a toolkit for detecting and removing bias from <abbr>AI</abbr></a>,
         <i class="website">Silicon Republic</i>, 19.09.2018.
       </li>
+      <li>Hao, Karen:
+        <a href="https://www.technologyreview.com/s/613320/ais-white-guy-problem-isnt-going-away/"><abbr>AI</abbr>’s white guy problem isn’t going away</a>,
+        <i class="magazine"><abbr>MIT</abbr> Technology Review</i>, 17.04.2019.
+      </li>
       <!--
       <li>
         <a href=""></a>
