--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -349,6 +349,10 @@
         <a href="https://thepublicvoice.org/ai-universal-guidelines/">Universal Guidelines for Artificial Intelligence</a>,
         The Public Voice, Brussels, Belgium, 23.10.2018.
       </li>
+      <li>Tannam, Ellen:
+        <a href="https://www.siliconrepublic.com/enterprise/ai-ethics-military"><abbr>AI</abbr> ethics and the military: A tangled web</a>,
+        <i class="website">Silicon Republic</i>, 19.02.2019.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
