Forrester: The Future of Political Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1088,6 +1088,14 @@
         online course by Professor <span lang="it">Furio Cerutti (Universitá degli Studi di Firenze)</span>
         hosted on iversity that ran in 2016.
       </li>
+      <li>Forrester, Katrina:
+        <a href="http://bostonreview.net/philosophy-religion/katrina-forrester-future-political-philosophy">The Future of Political Philosophy</a>,
+        <i class="website">Boston Review</i>, 17.09.2019.
+        <br />The article's introduction reads,
+        <q>For five decades Anglophone political philosophy has been dominated by the liberal egalitarianism of John Rawls. With liberalism in crisis, have these ideas outlived their time?</q>
+        <a href="https://scholar.harvard.edu/katrinaforrester/home">Katrina Forrester</a>
+        is Assistant Professor of Government and Social Studies at Harvard University.
+      </li>
     </ul>
 
     <h3>Philosophy of Mind</h3>
