Forrester: In the Shadow of Justice

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1096,6 +1096,17 @@
         <a href="https://scholar.harvard.edu/katrinaforrester/home">Katrina Forrester</a>
         is Assistant Professor of Government and Social Studies at Harvard University.
       </li>
+      <li>Forrester, Katrina:
+        <i class="booktitle">In the Shadow of Justice: Postwar Liberalism and the Remaking of Political Philosophy</i>. Princeton University Press, 2019. (432 pages)
+        <a href="https://press.princeton.edu/titles/13483.html"><abbr>ISBN</abbr> 9780691189420</a>.
+        <br />From the publisher's book description:
+        <q>In the aftermath of the civil rights movement and the Vietnam War, Rawls’s <i class="booktitle">A Theory of Justice</i> made a particular kind of liberalism essential to political philosophy.
+          Using archival sources, Forrester explores the ascent and legacy of this form of liberalism by examining its origins in midcentury debates among American antistatists and British egalitarians.
+          She traces the roots of contemporary theories of justice and inequality, civil disobedience, just war, global and intergenerational justice, and population ethics in the 1960s and ’70s and beyond.
+          In these years, political philosophers extended, developed, and reshaped this liberalism as they responded to challenges and alternatives on the left and right—from the New International Economic Order to the rise of the New Right.
+          These thinkers remade political philosophy in ways that influenced not only their own trajectory but also that of their critics.
+        </q>
+      </li>
     </ul>
 
     <h3>Philosophy of Mind</h3>
