A Trump Speech Written By Artificial Intelligence

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -563,6 +563,16 @@
         <a href="https://medium.com/intuitionmachine/how-automation-and-artificial-intelligence-strips-us-of-our-humanity-352a9b92b873">How Automation and Artificial Intelligence Strips us of our Humanity</a>,
         <i class="blog">Intuition Machine (on Medium)</i>, 12.03.2018 (five-minute read).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=EFHyzuqjaok">A Trump Speech Written By Artificial Intelligence</a>
+        (The New Yorker on YouTube, 4 minutes, 27.07.2017).
+        <br />For this video, <i class="magazine">The New Yorker</i> <q>fed 270,000 words spoken by Donald Trump
+        into a computer program that studies language patterns. This system analyzed his word choice and grammar, learning how to simulate Trump's speech.</q>
+        They then let the program output sentences at increasing levels of &ldquo;word-choice creativity&rdquo;.
+        The resulting speeches are nonsensical, especially at the higher levels of word-choice creativity.
+        One of the comments on the video says,
+        <q cite="https://www.youtube.com/watch?v=EFHyzuqjaok&lc=Ugyc5E5UVyLCcJyc87J4AaABAg">You can't simulate his speeches using intelligence, whether it's artificial or not</q>.
+      </li>
       <li>Polonski, Vyacheslav W.:
         <a href="https://theconversation.com/how-artificial-intelligence-conquered-democracy-77675">How artificial intelligence conquered democracy</a>,
         <i class="website">The Conversation</i>, 08.08.2017 (Creative Commons licence).
