--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -852,6 +852,10 @@
           </li>
         </ul>
       </li>
+      <li>Gershgorn, Dave:
+        <a href="https://qz.com/1046350/the-quartz-guide-to-artificial-intelligence-what-is-it-why-is-it-important-and-should-we-be-afraid/">The Quartz guide to artificial intelligence: What is it, why is it important, and should we be afraid?</a>
+        <i class="website">Quartz</i>, 10.09.2017.
+      </li>
       <li>Shaw, Reena:
         <a href="https://www.re-work.co/blog/top-10-machine-learning-algorithms-for-beginners">Top 10 Machine Learning Algorithms for Beginners</a>,
         <i class="blog">Re-Work blog</i>, 08.12.2017.
