McMullen: How to get started in machine learning - best books and sites for machine learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -889,6 +889,10 @@
         <a href="https://hackernoon.com/i-want-to-learn-artificial-intelligence-and-machine-learning-where-can-i-start-7a392a3086ec">‘I want to learn Artificial Intelligence and Machine Learning. Where can I start?’</a>,
         <i class="blog">Hackernoon on Medium</i>, 29.09.2018 (eight-minute read).
       </li>
+      <li>McMullen, Giles:
+        <a href="https://www.youtube.com/watch?v=itzmu0l93wM">How to get started in machine learning - best books and sites for machine learning</a>
+        (Python Programmer on YouTube, 9 minutes, 22.12.2017).
+      </li>
     </ul>
 
     <p>Books:</p>
